<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authentication.LoginActivity">

    <TextView
        android:id="@+id/masuk"
        android:layout_width="118dp"
        android:layout_height="44dp"
        android:textFontWeight="500"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:text="@string/masuk"
        android:textAppearance="@style/masuk"
        android:gravity="top" />

    <TextView
        android:id="@+id/login_untuk"
        android:layout_width="213dp"
        android:layout_height="17dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:text="@string/login_untuk"
        android:textAppearance="@style/login_untuk" />

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="193dp"
        android:layout_height="187dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/rounded_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="17dp"
        app:boxCornerRadiusBottomStart="17dp"
        app:boxCornerRadiusTopEnd="17dp"
        app:boxCornerRadiusTopStart="17dp"
        app:boxStrokeWidth="1dp"
        app:helperText="required"
        app:helperTextTextColor="@color/orange_background"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/orange_background"
        android:textColorHint="@color/orange_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintTextColor="@color/orange_background"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:boxCornerRadiusBottomEnd="17dp"
        app:boxCornerRadiusBottomStart="17dp"
        app:boxCornerRadiusTopEnd="17dp"
        app:boxCornerRadiusTopStart="17dp"
        app:boxStrokeWidth="1dp"
        app:helperText="required"
        app:helperTextTextColor="@color/orange_background"
        app:startIconDrawable="@drawable/ic_lock_person"
        app:startIconTint="@color/orange_background"
        android:textColorHint="@color/orange_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintTextColor="@color/orange_background"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/login"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:backgroundTint="@color/orange_background"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/daftarTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="85dp"
            android:textSize="14sp"
            android:textColor="@color/transaparant_black"
            android:text="@string/tidak_punya_akun" />

        <TextView
            android:id="@+id/buttonDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/orange_background"
            android:textFontWeight="400"
            android:textSize="14sp"
            android:text="@string/daftar" />
    </LinearLayout>
</LinearLayout>