<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authentication.LoginActivity">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="191dp"
        android:layout_height="190dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/rounded_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="17dp"
        app:boxCornerRadiusBottomStart="17dp"
        app:boxCornerRadiusTopEnd="17dp"
        app:boxCornerRadiusTopStart="11dp"
        app:boxStrokeWidth="1dp"
        app:helperText="required"
        app:helperTextTextColor="@color/orange_background"
        app:startIconDrawable="@drawable/ic_person_outline"
        app:startIconTint="@color/orange_background"
        android:textColorHint="@color/orange_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintTextColor="@color/orange_background"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="17dp"
        app:boxCornerRadiusBottomStart="17dp"
        app:boxCornerRadiusTopEnd="17dp"
        app:boxCornerRadiusTopStart="11dp"
        app:boxStrokeWidth="1dp"
        app:helperText="required"
        app:helperTextTextColor="@color/orange_background"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/orange_background"
        android:textColorHint="@color/orange_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintTextColor="@color/orange_background"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="17dp"
        app:boxCornerRadiusBottomStart="17dp"
        app:boxCornerRadiusTopEnd="17dp"
        app:boxCornerRadiusTopStart="11dp"
        app:boxStrokeWidth="1dp"
        app:helperText="required"
        app:helperTextTextColor="@color/orange_background"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/orange_background"
        android:textColorHint="@color/orange_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintTextColor="@color/orange_background"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:boxCornerRadiusBottomEnd="17dp"
        app:boxCornerRadiusBottomStart="17dp"
        app:boxCornerRadiusTopEnd="17dp"
        app:boxCornerRadiusTopStart="17dp"
        app:boxStrokeWidth="1dp"
        app:helperText="required"
        app:helperTextTextColor="@color/orange_background"
        app:startIconDrawable="@drawable/ic_lock_person"
        app:startIconTint="@color/orange_background"
        android:textColorHint="@color/orange_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintTextColor="@color/orange_background"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/Register"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:backgroundTint="@color/orange_background"
        />
</LinearLayout>